<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/incomeTitle"
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-black"
        android:text="@string/title_dashboard"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="70sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"/>

    <TextView
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/freq" />

    <RadioGroup
        android:id="@+id/freq"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:checkedButton="@id/oneTime">

        <RadioButton
            android:id="@+id/oneTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/OneTime" />

        <RadioButton
            android:id="@+id/Daily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Daily" />

        <RadioButton
            android:id="@+id/Weekly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Weekly" />

        <RadioButton
            android:id="@+id/Monthly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Monthly" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TransactionDate"
            android:layout_width="176dp"
            android:layout_height="54dp"
            android:text="Transaction Date"
            android:textAlignment="center"
            android:textSize="21sp" />

        <EditText
            android:id="@+id/entryDate"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:ems="10"
            android:inputType="date"/>
        <Button
            android:id="@+id/setDate"
            android:layout_width="109dp"
            android:layout_height="52dp"
            android:text="Select Date" />

    </LinearLayout>

    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:hint="@string/amount"
        android:inputType="number"
        android:text="0"
        android:textSize="25sp"
        tools:text="0" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:hint="@string/description"
        android:textSize="25sp" />

    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/add_income" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/cancel" />

</LinearLayout>
