<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/expenseTitle"
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-black"
        android:text="@string/title_notifications"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="70sp" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_weight="1"
        android:text="@string/title"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_weight="1"
        android:text="@string/title"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_weight="1"
        android:text="@string/title"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_weight="1"
        android:text="@string/title"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_weight="1"
        android:text="@string/title"
        android:textSize="25sp" />

    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/add_expense" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/cancel" />

</LinearLayout>
